# Tere

./: .gitignore  CMakeLists.txt  README.md  readme.txt
Samples/: Assert.h  CMakeLists.txt  LFLoader.cpp  LFLoader.h  Profile.h  ProfileIO.cpp  ProfileIO.hpp  main.cpp
Samples/iOS/: AppDelegate.h  AppDelegate.m  GLKitViewController.h  GLKitViewController.mm
Samples/iOS/Data/: info.plist
Samples/iOS/Data/Base.lproj/: LaunchScreen.xib  Main.storyboard
Samples/iOS/LFRender.xcodeproj/: project.pbxproj
Samples/iOS/LFRender.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Samples/iOS/LFRender.xcodeproj/project.xcworkspace/xcuserdata/apchen.xcuserdatad/: UserInterfaceState.xcuserstate
Samples/iOS/LFRender.xcodeproj/xcuserdata/apchen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Samples/iOS/LFRender.xcodeproj/xcuserdata/apchen.xcuserdatad/xcschemes/: LFRender.xcscheme  xcschememanagement.plist
Samples/image/: ImageCodec.cpp  ImageCodec.h  JpegCodec.cpp  WebpCodec.cpp
Samples/mesh/: Geometry.cpp  Geometry.hpp
TereMain/: CMakeLists.txt  LinearUI.cpp
TereMain/include/: ArcBall.h  ArcballUI.h  BoundingBox.h  CircleUI.h  Config.h  Const.h  CudaUtils.h  Error.h  GLHeader.h  InterpStrategy.h  Interpolation.h  LFEngine.h  LFEngineImpl.h  LFLoader.h  LightFieldAttrib.h  LinearUI.h  Memory.h  MultiLinearUI.h  OBJRender.h  Platform.h  PlyUtility.h  Poster.h  RayTracer.h  RenderUtils.h  Renderer.h  Strategy.h  TereScene.h  TextureFuser.h  ToString.h  Type.h  UIType.h  UserInterface.h  WeightedCamera.h
TereMain/include/camera/: Camera.h  Camera.hpp  Camera.inl  Extrinsic.hpp  Intrinsic.hpp
TereMain/include/common/: Common.hpp  CommonIO.hpp  CommonIO.inl  Log.hpp  Shader.hpp  Timer.hpp
TereMain/include/image/: Image.hpp  Image.inl  ImageCodec.h  ImageIO.hpp  ImageIO.inl  JpegCodec.h  WebpCodec.h
TereMain/include/mesh/: Geometry.hpp  Geometry.inl  tiny_obj_loader.h
TereMain/src/: ArcBall.cpp  ArcballUI.cpp  BoundingBox.cpp  BoundingBox.cu  CircleUI.cpp  InterpStrategy.cpp  Interpolation.cpp  LFEngine.cpp  LFEngineImpl.cpp  LFLoader.cpp  LinearUI.cpp  MultiLinearUI.cpp  OBJRender.cpp  PlyUtility.cpp  Poster.cpp  RayTracer.cpp  RenderUtils.cpp  Renderer.cpp  SearchStrategy.cpp  Strategy.cpp  TereScene.cpp  TextureFuser.cpp  UserInterface.cpp  WeighStrategy.cpp
TereMain/src/shader/: depth_frag.h  depth_vs.h  fuser_frag.h  fuser_vs.h  poster_frag.h  poster_vs.h  renderer_frag.h  renderer_vs.h
Test/: CMakeLists.txt
Test/TestTere/: CMakeLists.txt  TestCircleUI.cpp  TestInterpolation.cpp  TestLinearUI.cpp  TestQuaternionInterp.cpp  object.ply
TestData/lion/: extrinsics.txt  images.txt  intrinsics.txt  profile.txt
Tools/Scale/: CMakeLists.txt  LFLoader.cpp  LFLoader.h  ObjIO.cpp  ObjIO.h  main.cpp
android/: build.cmd
android/jni/: Android.mk  Application.mk
cmake/Modules/: Findglew.cmake  Findglfw3.cmake  Findglm.cmake  Findgtest.cmake  Findjpeg-turbo.cmake  Findwebp.cmake
scripts/: camera_point_cloud.m
source/: ClosestCamera.cpp  ClosestCamera.h  DecodeJpeg.cpp  DecodeWebp.cpp  Decoder.cpp  Decoder.h  LFEngine.cpp  LFEngine.h  LFLoader.cpp  LFLoader.h  LightFieldAttrib.h  Log.h  OBJRender.cpp  OBJRender.h  Preprocess.h  RenderCamView.cpp  RenderCamView.h  Shader.h  Timer.h  UserInterface.cpp  UserInterface.h  camera.h  depth_vs.h  main.cpp  renderer_frag.h  renderer_vs.h  tinyobj.cpp
source/shader/: depth.frag  depth.vs  depth_frag.h  renderer.frag  renderer.vs  renderer_frag.h  renderer_vs.h
tools/: CMakeLists.txt
tools/RearrangeMesh/: CMakeLists.txt  main.cpp
